--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <marquee><h2 id="banner">RUMAH ANAK YATIM NURUL IMAN, IPOH, PERAK</h2></marquee>
 	<header class="main-header" role="banner">
 	   <p class="logo">
-<img src="image/newlogo.jpg" /></p>
+<img src="image/newlogoo.png" /></p>
 
 <nav class="nav-bar">
 <ul class="nav-menu">
@@ -54,7 +54,16 @@
 <main class="main-content">
 <section class="content">
 <h1><center>Introduction</center></h1>
-<center><img src="image/intro.jpg" width="400" height="300"/></center>
+	
+<a href="#img24">
+<img src="image/intro.jpg" width="400" height="300" style="display: block; margin: 20px auto;">
+</a>
+
+<div id="img24" class="lightbox">
+<a href="#">
+<img src="image/intro.jpg" alt="Gambar Anak-anak Nurul Iman" style="display: block; margin: auto;">
+</a>
+</div>
 
 <p>Pertubuhan Kebajikan Kasih Nurul Iman Negeri Perak(Reg. No. 3092-11-PRK), also known as Rumah Nurul Iman, is a non-governmental organization (NGO) that manages the Nurul Iman Orphanage and Welfare Care Centre (JKM Reg. No A/P JB KK 056/2022). This organization provides shelter, care, and education to orphans and underprivileged children free of charge.</p>
 
