--- a/aboutme.html
+++ b/aboutme.html
@@ -21,7 +21,7 @@
         <p><strong>Program Code:</strong> CDIM262</p>
         <p><strong>Faculty:</strong> Faculty of Information Science</p>
         <p><strong>Submission date:</strong> 8/7/2025</p>
-        <p><strong>Published URL:</strong> <a href="https://dayah16.github.io/resumedayah/" target="_blank">Corporate Website</a></p>
+        <p><strong>Published URL:</strong> <a href="https://dayah16.github.io/Rumah-Nurul-Iman/" target="_blank">Corporate Website</a></p>
       </div>
     </div>
   </section>
