--- a/donation.html
+++ b/donation.html
@@ -27,7 +27,6 @@
 <li><a href="management.html">Management</a></li>
 <li><a href="location.html">Location</a></li>
 <li><a href="donation.html">Donation</a></li>
-<li><a href="aboutme.html">About Me</a></li>
 </ul>
 </nav>
 
@@ -47,7 +46,7 @@
 </ul>
 </div>
 
-<<div class="container-wrapper">
+<div class="container-wrapper">
 
 <div class="container">
 <!=== START MAIN ===>
