--- a/establishment.html
+++ b/establishment.html
@@ -78,7 +78,7 @@
 
 <p>In its initial stage, Rumah Nurul Iman was managed by a committee. The committee collectively chose Mr. Khairul Anuar as the Manager and Warden, giving him responsibility for the daily operations and management of the home. However, financial matters and property management were overseen by other appointed individuals.</p>
 
-<p>In 2004, the center was moved to a new location at Jalan Intan, Kampung Dato Ahmad Said, due to various logistical and administrative issues. This relocation was intended to offer a more appropriate setting and improved facilities for the children.</p>
+<p>In 2004, the center was moved to a new location at Jalan Intan, Kampung Dato Ahmad Said <a href="location.html#location">(Maps)</a>, due to various logistical and administrative issues. This relocation was intended to offer a more appropriate setting and improved facilities for the children.</p>
 
 <p>Towards the close of 2005, a further relocation occurred. The children were moved to a rented house at Plot 359, Lorong Dato, Manjoi, Ipoh, Perak. The living arrangement comprised a modest two-unit house rented for RM200.00 each month. Even with financial challenges and relying entirely on his personal income, Mr. Khairul Anuar was determined and dedicated to the ongoing operations of the home. His efforts received substantial backing from the local community and the State Assemblyman for Manjoi at that time, YB Dato’ Haji Nazri, whose contributions were vital in supporting the care center.</p>
 
