--- a/location.html
+++ b/location.html
@@ -51,7 +51,7 @@
 <div class="container">
 <!=== START MAIN ===>
 <main class="main-content">
-<section class="content">
+<section id="location" class="content">
 <h1><center>Location</center></h1>
 
 
