--- a/management.html
+++ b/management.html
@@ -18,7 +18,7 @@
 <marquee><h2 id="banner">RUMAH ANAK YATIM NURUL IMAN, IPOH, PERAK</h2></marquee>
 	<header class="main-header" role="banner">
 	   <p class="logo">
-<img src="image/newlogoo.png" /></p>
+<img src="image/Newlogo.png" /></p>
 
 <nav class="nav-bar">
 <ul class="nav-menu">
